## Process this file with automake to produce Makefile.in

bin_PROGRAMS = pwman pwman-init
pwman_SOURCES = pwman.c \
				utils/clipboard.c \
				utils/clipboard.h \
				utils/config.c \
				utils/config.h \
				utils/console.c \
				utils/console.h \
				utils/crypto.c \
				utils/crypto.h \
				utils/fio.c \
				utils/fio.h \
				utils/input.c \
				utils/input.h \
				utils/path.c \
				utils/path.h \
				commands/psm_add.c \
				commands/psm_add.h \
				commands/psm_exit.c \
				commands/psm_exit.h \
				commands/psm_get.c \
				commands/psm_get.h \
				commands/psm_help.c \
				commands/psm_help.h \
				commands/psm_rm.c \
				commands/psm_rm.h \
				commands/psm_show.c \
				commands/psm_show.h
				
pwman_init_SOURCES = pwman-init.c \
					 utils/config.c \
					 utils/config.h \
					 utils/crypto.c \
					 utils/crypto.h \
					 utils/fio.c \
					 utils/fio.h \
					 utils/input.c \
					 utils/input.h \
					 utils/console.c \
					 utils/console.h
